feat: login, register and infoTooltip components

--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,8 @@
 @import url('./blocks/page/_section-container/page_section-container.css');
 @import url('./blocks/header/header.css');
 @import url('./blocks/header/__logo/header__logo.css');
+@import url('./blocks/header/__links-container/header__links-container.css');
+@import url('./blocks/header/__link/header__link.css');
 @import url('./blocks/profile/profile.css');
 @import url('./blocks/profile/__avatar-container/profile__avatar-container.css');
 @import url('./blocks/profile/__avatar/profile__avatar.css');
@@ -36,18 +38,23 @@
 @import url('./blocks/popup/_opened/popup_opened.css');
 @import url('./blocks/popup/__container/popup__container.css');
 @import url('./blocks/popup/__container/_photo-view/popup__container_photo-view.css');
+@import url('./blocks/popup/__container/_place/popup__container_place_info-tooltip.css');
 @import url('./blocks/popup/__btn/popup__btn.css');
 @import url('./blocks/popup/__btn/_delete/popup__btn_delete.css');
 @import url('./blocks/popup/__btn/_close/popup__btn_close.css');
 @import url('./blocks/popup/__title/popup__title.css');
 @import url('./blocks/popup/__title/_delete/popup__title_delete.css');
+@import url('./blocks/popup/__info-image/popup__info-image.css');
+@import url('./blocks/popup/__info-text/popup__info-text.css');
 @import url('./blocks/form/form.css');
 @import url('./blocks/form/__fieldset/form__fieldset.css');
+@import url('./blocks/form/__fieldset/_place/form__fieldset_place_auth.css');
 @import url('./blocks/form/__fieldset/_profile/form__profile.css');
 @import url('./blocks/form/__fieldset/_photo-card/form__fieldset_photo-card.css');
 @import url('./blocks/form/__fieldset/_avatar/form__fieldset_avatar.css');
 @import url('./blocks/form/__label/form__label.css');
 @import url('./blocks/form/__input/form__input.css');
+@import url('./blocks/form/__input/_place/form__input_place_auth.css');
 @import url('./blocks/form/__input/_name/form__input_name.css');
 @import url('./blocks/form/__input/_about/form__input_about.css');
 @import url('./blocks/form/__input/_site/form__input_site.css');
@@ -56,8 +63,12 @@
 @import url('./blocks/form/__input/_type/_error/form__input_type_error.css');
 @import url('./blocks/form/__btn/form__btn.css');
 @import url('./blocks/form/__btn/_save/form__btn_save.css');
+@import url('./blocks/form/__btn/_place/form__btn_place_auth.css');
 @import url('./blocks/form/__btn/_disabled/form__btn_disabled.css');
 @import url('./blocks/photo-view/photo-view.css');
 @import url('./blocks/photo-view/__image/photo-view__image.css');
 @import url('./blocks/photo-view/__info/photo-view__info.css');
 @import url('./blocks/photo-view/__name/photo-view__name.css');
+@import url('./blocks/auth/auth.css');
+@import url('./blocks/auth/__title/auth__title.css');
+@import url('./blocks/auth/__link/auth__link.css');
