--- a/src/blocks/header/header.css
+++ b/src/blocks/header/header.css
@@ -1,4 +1,7 @@
 .header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
   padding: 45px 0 36px 0;
   border-bottom: 1px solid rgba(84,84,84,.7);
 }
