--- a/src/blocks/header/__link/header__link.css
+++ b/src/blocks/header/__link/header__link.css
@@ -1,12 +1,13 @@
 .header__link {
-  color: #fff;
-  background-color: #000;
-  font-style: normal;
-  font-weight: 400;
   font-size: 18px;
   line-height: 22px;
-  text-align: center;
-  justify-self: flex-end;
-  margin:0;
+  text-align: right;
+  color: #fff;
+  text-decoration: none;
+  transition: opacity .8s ease 0s;
+}
+
+.header__link:hover {
+  opacity: .6;
 }
 
