--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,9 @@
 @import url('./blocks/header/header.css');
 @import url('./blocks/header/__logo/header__logo.css');
 @import url('./blocks/header/__links-container/header__links-container.css');
+@import url('./blocks/header/__user-email/header__user-email.css');
 @import url('./blocks/header/__link/header__link.css');
+@import url('./blocks/header/__link/_place/header__link_place_main.css');
 @import url('./blocks/profile/profile.css');
 @import url('./blocks/profile/__avatar-container/profile__avatar-container.css');
 @import url('./blocks/profile/__avatar/profile__avatar.css');
