feat: adaptive header

--- a/src/blocks/form/__btn/_place/form__btn_place_auth.css
+++ b/src/blocks/form/__btn/_place/form__btn_place_auth.css
@@ -4,3 +4,9 @@
   color: #000000;
   border-radius: 2px;
 }
+
+@media (max-width: 600px) {
+  .form__btn_place_auth {
+    margin-top: 170px;
+  }
+}
