--- a/src/blocks/auth/__title/auth__title.css
+++ b/src/blocks/auth/__title/auth__title.css
@@ -6,3 +6,11 @@
   color: #FFFFFF;
   margin:0 0 50px 0;
 }
+
+@media (max-width: 600px) {
+  .auth__title {
+    font-size: 20px;
+    line-height: 24px;
+    margin-bottom: 40px;
+  }
+}
