--- a/src/blocks/popup/__info-text/popup__info-text.css
+++ b/src/blocks/popup/__info-text/popup__info-text.css
@@ -6,3 +6,10 @@
   margin:30px 0 0;
   color: #000000;
 }
+
+@media (max-width: 600px) {
+  .popup__info-text {
+    font-size: 20px;
+    line-height: 24px;
+  }
+}
