--- a/src/index.css
+++ b/src/index.css
@@ -3,11 +3,18 @@
 @import url('./blocks/page/page.css');
 @import url('./blocks/page/_section-container/page_section-container.css');
 @import url('./blocks/header/header.css');
+@import url('./blocks/header/_auth-container/header_auth-container.css');
 @import url('./blocks/header/__logo/header__logo.css');
+@import url('./blocks/header/__menu-container/header__menu-container.css');
+@import url('./blocks/header/__btn-container/header__btn-container.css');
 @import url('./blocks/header/__links-container/header__links-container.css');
+@import url('./blocks/header/__links-container/_closed/header__links-container_closed.css');
+@import url('./blocks/header/__links-container/_opened/header__links-container_opened.css');
 @import url('./blocks/header/__user-email/header__user-email.css');
 @import url('./blocks/header/__link/header__link.css');
 @import url('./blocks/header/__link/_place/header__link_place_main.css');
+@import url('./blocks/header/__btn/header__btn.css');
+@import url('./blocks/header/__btn/_active/header__btn_active.css');
 @import url('./blocks/profile/profile.css');
 @import url('./blocks/profile/__avatar-container/profile__avatar-container.css');
 @import url('./blocks/profile/__avatar/profile__avatar.css');
